app/assets/stylesheets/tabs/_entity_list.css.sass
.entity-list
  .left-nav
    @extend .tab-list-filters
  .main-header
    +stretch(0, 0, false, 0)
  .main-results-wrapper
    +stretch(false, 0, 0, 0)
    top: 27px
    overflow-y: auto
    .main-results
      border-left: none
  .tab-header
    .search-area
      max-width: 600px
    .left-nav
      margin: 0
      padding: 0
    .add-entity
      position: absolute
      top: 0
      bottom: 0
      right: 20px
      padding: $tab-header-padding 0
      .default-button
        margin: 0
    .add-entity.with-pagination
      right: 70px
    .dropdown-menu
      $new-entities-dropdown-height: 600px
      max-height: $new-entities-dropdown-height
      ul
        max-height: $new-entities-dropdown-height - 30px
        overflow-y: auto
  .tab-main
    .left-nav
      overflow-y: auto
      @extend .tab-workbench
      padding-left: 20px
      padding-right: 20px
      padding: $tab-main-margin-top 20px 0
    .with-left-nav
      margin-top: $tab-main-margin-top // padding is ignored by absolute children
      @extend .tab-workbench
      @extend .expand-vertically

  .left-nav-bottom
    position: absolute
    background: white
    bottom: 0
    right: 0
    width: 100%
    padding: 1.5em 0 2em
    span
      color: $light-gray
      line-height: 1.3em
      padding: .1em 0
      &:first-child
        margin-left: 29px
        margin-right: .6em
        padding-right: .6em

  .result-list
    tbody tr
      @extend %tr-clickable

